# yt-media-storage

./: CMakeLists.txt  README.md
include/: media_storage.h
src/: CMakeLists.txt  chunker.cpp  chunker.h  configuration.h  crypto.cpp  decoder.cpp  decoder.h  drive_manager_ui.cpp  drive_manager_ui.h  encoder.cpp  encoder.h  integrity.cpp  integrity.h  main.cpp  main_gui.cpp  media_storage_api.cpp  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
tests/: CMakeLists.txt  test_api.cpp  test_chunker.cpp  test_codec.cpp  test_crypto.cpp  test_dct.cpp  test_integrity.cpp  test_roundtrip.cpp  test_stream.cpp
